blonder docs #gatsby

--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -4,6 +4,7 @@ title: Documentation
 
 # Documentation
 
+
 ## Getting Started
 
-Edit `docs/index.mdx` this page to start writing documentation...
+Fontend framework for developers, Light weight with speed 
