--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,22 +7,18 @@ import {
   HeroTitle,
   HeroTeaser,
   HeroActionList,
-  HeroAction,
+  HeroAction
 } from "smooth-doc/components";
 import heroBackgroundImageURL from "../images/hero-background.png";
 
 <HeroSection>
   <Hero backgroundImageURL={heroBackgroundImageURL}>
     <HeroBody>
-      <HeroTitle>Your Smooth DOC setup is complete!</HeroTitle>
-      <HeroTeaser>Edit `pages/index.mdx` to personalize homepage.</HeroTeaser>
+      <HeroTitle> Blonder </HeroTitle>
+      <HeroTeaser> Frontend framework with optimization </HeroTeaser>
       <HeroActionList>
         <HeroAction>
-          <Button
-            variant="neutral"
-            forwardedAs="a"
-            href="/docs/"
-          >
+          <Button variant="neutral" forwardedAs="a" href="/docs/">
             Browse Docs
           </Button>
         </HeroAction>
@@ -30,4 +26,3 @@ import heroBackgroundImageURL from "../images/hero-background.png";
     </HeroBody>
   </Hero>
 </HeroSection>
-
